opam-version: "2.0"
maintainer: "Hezekiah M. Carty <hez@0ok.org>"
authors: [ "Hezekiah M. Carty <hez@0ok.org>" ]
license: "MIT"
synopsis: "Go-like [%defer later]; now syntax"
homepage: "https://github.com/hcarty/ppx_defer"
bug-reports: "https://github.com/hcarty/ppx_defer/issues"
dev-repo: "git+https://github.com/hcarty/ppx_defer.git"
build:[ "dune" "build" "-p" name "-j" jobs ]
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {>= "2.0"}
  "ocaml-migrate-parsetree"
  "ppx_tools_versioned"
]
