(test
 (name ic)
 (modules ic)
 (preprocess
  (pps ppx_defer)))

(test
 (name ic_lwt)
 (modules ic_lwt)
 (preprocess
  (pps ppx_defer lwt_ppx))
 (libraries lwt.unix))

(test
  (name ic_async)
  (modules ic_async)
  (preprocess
    (pps ppx_defer ppx_jane))
  (libraries core async core_unix.command_unix))
